--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "object-fit-videos": "^1.0.4",
     "particles.js": "^2.0.0",
     "select2": "^4.0.6-rc.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "vintage-popup": "^0.1.75"
   },
   "author": "NM <nazarriko@gmail.com>",
   "devDependencies": {
