--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^1.20.3",
     "iscroll": "^5.2.0",
     "jquery": "^2.2.4",
+    "jquery-touch-events": "git+https://github.com/benmajor/jQuery-Touch-Events.git",
     "jquery.animate-number": "0.0.14",
     "object-fit-images": "^3.2.3",
     "object-fit-videos": "^1.0.4",
